first completed draft of background research

--- a/includes/config.tex
+++ b/includes/config.tex
@@ -4,8 +4,11 @@
 \usepackage{underscore}
 \usepackage{titlesec}
 \usepackage{graphicx}
+\usepackage{mathtools}
+\usepackage{listings}
 \usepackage[export]{adjustbox}
 \usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
+\usepackage[font=small]{caption}
 
 % spacing
 \input{./includes/spacing.tex}
