--- a/includes/references.bib
+++ b/includes/references.bib
@@ -1,23 +1,48 @@
+@ARTICLE{anand03,
+    AUTHOR    = {Anand, Sarabjot Singh and Mobasher, Bamshad},
+    TITLE     = {Intelligent Techniques for Web Personalization},
+    JOURNAL   = {Proceedings of the 2003 international conference on Intelligent Techniques for Web Personalization},
+    VOLUME    = {7},
+    NUMBER    = {4},
+    PUBLISHER = {Springer Berlin Heidelberg},
+    MONTH     = oct,
+    YEAR      = {2003}
+}
+
+@INCOLLECTION{burke07,
+    AUTHOR    = {Burke, Robin},
+    TITLE     = {Hybrid Web Recommender Systems},
+    BOOKTITLE = {The Adaptive Web},
+    PAGES     = {377--408},
+    PUBLISHER = {Springer Berlin Heidelberg},
+    YEAR      = {2007}
+}
+
 @ARTICLE{linden03,
     AUTHOR    = {Linden, Greg and Smith, Brent and York, Jeremy},
     TITLE     = {Amazon.com recommendations: Item-to-item collaborative filtering},
-    PUBLISHER = {Internet Computing, IEEE 7.1},
+    JOURNAL   = {Internet Computing, IEEE},
+    VOLUME    = {7},
+    NUMBER    = {1},
+    PAGES     = {76--80},
+    MONTH     = {Jan/Feb},
     YEAR      = {2003}
 }
 
 @MISC{mccarthy07,
     AUTHOR       = {McCarthy, John},
-    title        = {What Is Artificial Intelligence?},
-    month        = nov,
-    year         = {2007},
-    howpublished = {http://www-formal.stanford.edu/jmc/whatisai/whatisai.html}
+    TITLE        = {What Is Artificial Intelligence?},
+    MONTH        = nov,
+    YEAR         = {2007},
+    HOWPUBLISHED = {http://www-formal.stanford.edu/jmc/whatisai/whatisai.html}
 }
 
 @MISC{netflix09,
-    title        = {Netflix Prize: \$1 Million Paid, Another Million Now Up For Grabs},
-    month        = sep,
-    year         = {2009},
-    howpublished = {http://blog.netflix.com/2009\_09\_01\_archive.html}
+    AUTHOR       = {Netflix Inc.},
+    TITLE        = {Netflix Prize: \$1 Million Paid, Another Million Now Up For Grabs},
+    MONTH        = sep,
+    YEAR         = {2009},
+    HOWPUBLISHED = {http://blog.netflix.com/2009\_09\_01\_archive.html}
 }
 
 @BOOK{ricci11,
