--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -10,9 +10,9 @@ Recommender systems are usually very tight to the context and architecture of th
 
 This proposal discusses specific challenges of recommender systems and -- based on the background research as well as evaluation of existing solutions -- proposes a potential solution to overcome them. Design requirements for the proposed solution are examined and resultant technology choices are defined. Finally, a project plan to ensure the project's execution is compiled.
 
-\textit{Section 2} introduces the concepts of machine learning and recommender systems. The adaption of recommender systems in research and industry are discussed. Then, an overview of recommender approaches as well as algorithms are described. Finally, existing solutions are evaluated.
+\textit{Section 2} introduces the concepts of machine learning and recommender systems. The adaption of recommender systems in research and industry are discussed. Then, an overview of recommender approaches as well as algorithms are described.
 
-\textit{Section 3} discusses challenges of recommender system and proposes a new approach to overcome specific aforementioned challenges.
+\textit{Section 3} discusses challenges of recommender system and proposes a new approach to overcome specific aforementioned challenges. Finally, existing solutions are evaluated.
 
 \textit{Section 4} pictures the architectual design of the solution and defines the technologies to be used.
 
