--- a/sections/problem.tex
+++ b/sections/problem.tex
@@ -1,7 +1,5 @@
 \chapter{Problem Definition}
 
-\section{Challenges of Recommender Systems}
-
 %planning:
 %- 300 words
 %- tight to application
@@ -16,3 +14,7 @@
 \subsection{Interoparability}
 
 \subsection{Ease of Integration}
+
+
+
+\section{Evaluation of Existing Solutions}
